fix get item remove item group and category
