# swagger-output.json
@@ -1439,11 +1439,6 @@
             "type": "string"
           },
           {
-            "name": "groupId",
-            "in": "query",
-            "type": "string"
-          },
-          {
             "name": "propertyType",
             "in": "query",
             "type": "string"
@@ -1557,9 +1552,6 @@
                   "example": "any"
                 },
                 "showInSales": {
-                  "example": "any"
-                },
-                "groupId": {
                   "example": "any"
                 },
                 "images": {
@@ -1710,9 +1702,6 @@
                 "showInSales": {
                   "example": "any"
                 },
-                "groupId": {
-                  "example": "any"
-                },
                 "images": {
                   "example": "any"
                 },
@@ -1852,6 +1841,578 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/sales/": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "paymentStatus",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "isActive",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "fromDate",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "toDate",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "customerName": {
+                  "example": "any"
+                },
+                "customerContact": {
+                  "example": "any"
+                },
+                "invoiceNo": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                },
+                "items": {
+                  "example": "any"
+                },
+                "subTotal": {
+                  "example": "any"
+                },
+                "cgst": {
+                  "example": "any"
+                },
+                "sgst": {
+                  "example": "any"
+                },
+                "igst": {
+                  "example": "any"
+                },
+                "tax": {
+                  "example": "any"
+                },
+                "discount": {
+                  "example": "any"
+                },
+                "total": {
+                  "example": "any"
+                },
+                "paymentStatus": {
+                  "example": "any"
+                },
+                "amountPaid": {
+                  "example": "any"
+                },
+                "balanceAmount": {
+                  "example": "any"
+                },
+                "paymentMode": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/sales/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "customerName": {
+                  "example": "any"
+                },
+                "customerContact": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                },
+                "items": {
+                  "example": "any"
+                },
+                "subTotal": {
+                  "example": "any"
+                },
+                "cgst": {
+                  "example": "any"
+                },
+                "sgst": {
+                  "example": "any"
+                },
+                "igst": {
+                  "example": "any"
+                },
+                "tax": {
+                  "example": "any"
+                },
+                "discount": {
+                  "example": "any"
+                },
+                "total": {
+                  "example": "any"
+                },
+                "paymentStatus": {
+                  "example": "any"
+                },
+                "amountPaid": {
+                  "example": "any"
+                },
+                "balanceAmount": {
+                  "example": "any"
+                },
+                "paymentMode": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/sales/{id}/payment": {
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "amountPaid": {
+                  "example": "any"
+                },
+                "paymentMode": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/purchases/": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "search",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "paymentStatus",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "isActive",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "fromDate",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "toDate",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "vendorName": {
+                  "example": "any"
+                },
+                "vendorContact": {
+                  "example": "any"
+                },
+                "purchaseNo": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                },
+                "gstin": {
+                  "example": "any"
+                },
+                "items": {
+                  "example": "any"
+                },
+                "subTotal": {
+                  "example": "any"
+                },
+                "cgst": {
+                  "example": "any"
+                },
+                "sgst": {
+                  "example": "any"
+                },
+                "igst": {
+                  "example": "any"
+                },
+                "tax": {
+                  "example": "any"
+                },
+                "discount": {
+                  "example": "any"
+                },
+                "total": {
+                  "example": "any"
+                },
+                "paymentStatus": {
+                  "example": "any"
+                },
+                "amountPaid": {
+                  "example": "any"
+                },
+                "balanceAmount": {
+                  "example": "any"
+                },
+                "paymentMode": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/purchases/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "vendorName": {
+                  "example": "any"
+                },
+                "vendorContact": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                },
+                "gstin": {
+                  "example": "any"
+                },
+                "items": {
+                  "example": "any"
+                },
+                "subTotal": {
+                  "example": "any"
+                },
+                "cgst": {
+                  "example": "any"
+                },
+                "sgst": {
+                  "example": "any"
+                },
+                "igst": {
+                  "example": "any"
+                },
+                "tax": {
+                  "example": "any"
+                },
+                "discount": {
+                  "example": "any"
+                },
+                "total": {
+                  "example": "any"
+                },
+                "paymentStatus": {
+                  "example": "any"
+                },
+                "amountPaid": {
+                  "example": "any"
+                },
+                "balanceAmount": {
+                  "example": "any"
+                },
+                "paymentMode": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/purchases/{id}/payment": {
+      "patch": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "amountPaid": {
+                  "example": "any"
+                },
+                "paymentMode": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
